--- a/desafios/d011/index.html
+++ b/desafios/d011/index.html
@@ -11,9 +11,8 @@
             margin: 0px;
         }
 
-        #espaco {
-            height: 2000px;
-            width: 2000px;
+        body {
+            height: 98vh;
             background: black url("imagens/espaco.jpg") center center no-repeat fixed;
 
         }
@@ -29,10 +28,8 @@
 
 <body>
 
-    <div id="espaco">
         <div id="astronauta">
         </div>
-    </div>
 </body>
 
 </html>
