--- a/desafios/d015/facebook.html
+++ b/desafios/d015/facebook.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>facebook</title>
-    <style>
-        * {
-            padding: 0px;
-            margin: 0px;
-        }
-        body {
-            width: 100vw;
-            height: 100vh;
-
-            background: black url("imagens/tela-facebook.jpg") no-repeat top center;
-            background-size: cover;
-        }
-    </style>
+    <link rel="stylesheet" href="estilos/iframes.css">
 </head>
 <body>
-    
+    <img src="imagens/tela-facebook.jpg" alt="Imagem do facebook">
+    <a href="https://www.facebook.com/CursosEmVideo/" target="_blank" rel="external">Acesse</a>
 </body>
 </html>
