--- a/desafios/d015/index.html
+++ b/desafios/d015/index.html
@@ -17,10 +17,10 @@
         <div id="sidebar">
             <a href="home.html"  target="iphone"><img src="imagens/logo-home.jpg" alt="Logo de uma casa"></a>
             <a href="youtube.html" target="iphone"><img src="imagens/logo-youtube.jpg" alt="Logo do youtube"></a>
-            <a href="#"><img src="imagens/logo-github.jpg" alt="Logo do gitHub"></a>
-            <a href="#"><img src="imagens/logo-instagram.jpg" alt="Logo do Instagram"></a>
-            <a href="#"><img src="imagens/logo-twitter.jpg" alt="Logo do twitter"></a>
-            <a href="#"><img src="imagens/logo-facebook.jpg" alt="Logo do facebook"></a>
+            <a href="github.html" target="iphone"><img src="imagens/logo-github.jpg" alt="Logo do gitHub"></a>
+            <a href="instagram.html" target="iphone"><img src="imagens/logo-instagram.jpg" alt="Logo do Instagram"></a>
+            <a href="twitter.html" target="iphone"><img src="imagens/logo-twitter.jpg" alt="Logo do twitter"></a>
+            <a href="facebook.html" target="iphone"><img src="imagens/logo-facebook.jpg" alt="Logo do facebook"></a>
         </div>
     </main>
 </body>
