--- a/desafios/d015/youtube.html
+++ b/desafios/d015/youtube.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>youtube</title>
-    <style>
-        * {
-            padding: 0px;
-            margin: 0px;
-        }
-        body {
-            width: 90vw;
-            height: 2971px;
-
-            background-image: url("imagens/tela-youtube.png");
-            background-position: top center;
-            background-repeat: no-repeat; 
-        }
-    </style>
+    <link rel="stylesheet" href="estilos/iframes.css">
 </head>
+
 <body>
-    
+    <img src="imagens/tela-youtube.png" alt="Imagem do youtube">
+    <a href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="external">Acesse</a>
 </body>
+
 </html>
